--- a/CATALOGO.HTML
+++ b/CATALOGO.HTML
@@ -22,8 +22,8 @@
     <ul class="itmenu">
   <li><a href="INDEX.HTML" class="foco " tabindex="0">INICIO</a></li>
     <li><a href="/CATALOGO.HTML" class="foco activo" tabindex="0">CATALOGO</a></li>
-    <li><a href="" class="foco" tabindex="0">ACCESORIOS</a></li>
-    <li><a href="" class="foco" tabindex="0">COLECIONES</a></li>
+    <li><a href="/ACCESORIOS.HTML" class="foco" tabindex="0">ACCESORIOS</a></li>
+  
        </ul>
      </nav>
     </header>
