--- a/PANTALONES.HTML
+++ b/PANTALONES.HTML
@@ -9,6 +9,7 @@
     <link rel="Stylesheet" href="./ESTILO/ESTILO3.CSS">
     <link rel="Stylesheet" href="./ESTILO/ESTILOCALOGO.CSS">
     <link rel="stylesheet" href="./ESTILO/ESILOCUADRICULA.CSS">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
     <title>URBAN MUSE</title>
@@ -20,8 +21,7 @@
     <ul class="itmenu">
     <li><a href="/INDEX.HTML">INICIO</a></li>
     <li><a href="/CATALOGO.HTML">CATALOGO</a></li>
-    <li><a href="">ACCESORIOS</a></li>
-    <li><a href="">COLECIONES</a></li>
+    <li><a href="/ACCESORIOS.HTML">ACCESORIOS</a></li>
        </ul>
      </nav>
     </header>
@@ -162,7 +162,7 @@ ZAPATILLAS
       <div class="card h-100">
         <img src="/imagenes pantalones/mini.jpg" class="card-img-top fixed-img" alt="Camiseta Rayas">
         <div class="card-body text-center">
-          <h5 class="card-title"></h5>
+          <h5 class="card-title">Short Denim Urbano LV Style</h5>
           <p>$120.000 - Tallas S, M, L</p>
           <a href="#" class="btn btn-dark">Ver más</a>
         </div>
