--- a/CHAQUETAS.HTML
+++ b/CHAQUETAS.HTML
@@ -20,8 +20,7 @@
     <ul class="itmenu">
     <li><a href="/INDEX.HTML">INICIO</a></li>
     <li><a href="/CATALOGO.HTML">CATALOGO</a></li>
-    <li><a href="">ACCESORIOS</a></li>
-    <li><a href="">COLECIONES</a></li>
+    <li><a href="/ACCESORIOS.HTML">ACCESORIOS</a></li>
        </ul>
      </nav>
     </header>
