--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -7,6 +7,7 @@
     <link rel="Stylesheet" href="./ESTILO/ESTILO1.CSS">
     <link rel="Stylesheet" href="./ESTILO/ESTILO2.CSS">
     <link rel="Stylesheet" href="./ESTILO/ESTILO3.CSS">
+    
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
    
@@ -21,8 +22,7 @@
     <ul class="itmenu">
     <li><a href="INDEX.HTML" class="foco activo" tabindex="0">INICIO</a></li>
     <li><a href="/CATALOGO.HTML" class="foco" tabindex="0">CATALOGO</a></li>
-    <li><a href="" class="foco" tabindex="0">ACCESORIOS</a></li>
-    <li><a href="" class="foco" tabindex="0">COLECIONES</a></li>
+    <li><a href="/ACCESORIOS.HTML" class="foco" tabindex="0">ACCESORIOS</a></li>
        </ul>
        </ul>
      </nav>
@@ -67,7 +67,7 @@ Skater Skull    Negra, estampado calavera, manga ancha  $64.900
 
 </div>
 <div class="imagen_texto"  >
-<img src="/IMAGENES/overzice.jpg" alt="img_texto">
+<img src="/IMAGENES/undergold.jpg" alt="img_texto">
 
 </div>
   </section>
@@ -101,7 +101,7 @@ Chino Street    Arena, estilo casual, cintura ajustable $89.900
 </p>
 </div>
 <div class="imagen_texto"  >
-<img src="/IMAGENES/pantalon.jpeg" alt="img_texto">
+<img src="/IMAGENES/pantalon.jpg" alt="img_texto">
 </div>
   </section>
    </section>
@@ -131,7 +131,7 @@ Hoodie Zipper   Gris, con cremallera, algodón grueso    $119.900</p>
 </p>
 </div>
 <div class="imagen_texto"  >
-<img src="/IMAGENES/chaqueta.jpg" alt="img_texto">
+<img src="/IMAGENES/chaquetajack.jpg" alt="img_texto">
 </div>
   </section>
    <section class="contenido_texto">
@@ -148,7 +148,7 @@ Adidas Busenitz Classic Roja, con tres rayas blancas, lengüeta larga    $270.00
 </p>
 </div>
 <div class="imagen_texto"  >
-<img src="/IMAGENES/zapa2.jpg" alt="img_texto" >
+<img src="/IMAGENES/louisskate.jpg" alt="img_texto" >
 </div>
   </section>
 <footer class="bg-dark text-white text-center py-4 mt-auto">
