--- a/zapa.html
+++ b/zapa.html
@@ -9,6 +9,7 @@
     <link rel="Stylesheet" href="./ESTILO/ESTILO3.CSS">
     <link rel="Stylesheet" href="./ESTILO/ESTILOCALOGO.CSS">
     <link rel="stylesheet" href="./ESTILO/ESILOCUADRICULA.CSS">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
     <title>URBAN MUSE</title>
@@ -20,8 +21,8 @@
     <ul class="itmenu">
     <li><a href="/INDEX.HTML">INICIO</a></li>
     <li><a href="/CATALOGO.HTML">CATALOGO</a></li>
-    <li><a href="">ACCESORIOS</a></li>
-    <li><a href="">COLECIONES</a></li>
+    <li><a href="/ACCESORIOS.HTML">ACCESORIOS</a></li>
+   
        </ul>
      </nav>
     </header>
@@ -180,6 +181,7 @@ ZAPATILLAS
         </div>
       </div>
     </div>
+    
   </div>
 </div>
   <!--fin-->
